change ableplayer z-index to prevent hiding BS dropdown nav

--- a/app/javascript/stylesheets/ableplayer/ableplayer.4.4.1.scss
+++ b/app/javascript/stylesheets/ableplayer/ableplayer.4.4.1.scss
@@ -48,7 +48,7 @@
   width: 100%; /* will be changed dynamically as player is contructed */
   background-color: #000;
   box-shadow: 0px 0px 16px #262626;
-  z-index: 5000;
+  z-index: 900; /* changed from 5000 to sit behind dropdown nav */
 }
 .able-column-left {
     float: left;
